--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "autocannon": "^7.7.1",
     "benchmark": "^2.1.4",
+    "fast-json-stringify": "^5.5.0",
     "fastify": "^4.4.0",
     "on-net-listen": "^1.1.2",
     "privsym": "^1.0.0",
